# minder

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile
.cargo/: audit.toml
.github/workflows/: audit.yml  cargo-publish.yml  ci.yml  pages.yml  release.yml
agents/code-reviewer/: AGENT.md
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: loop_mode.rs  main.rs  provider_select.rs  reporter.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: hooks.rs  lib.rs  message.rs  provider.rs  session.rs  tool.rs
crates/agent-hooks/: Cargo.toml
crates/agent-hooks/src/: engine.rs  lib.rs
crates/agent-hooks/tests/: session_integration.rs
crates/agent-providers/: Cargo.toml
crates/agent-providers/src/: anthropic.rs  gemini.rs  ollama.rs  openai.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools-mcp/: Cargo.toml
crates/agent-tools-mcp/src/: lib.rs  manifest.rs
crates/agent-tools-wasm/: Cargo.toml
crates/agent-tools-wasm/src/: host_fetch.rs  lib.rs  manifest.rs
crates/agent-tools-wasm/tests/: plugin_integration.rs
crates/agent-tools-wasm/tests/fixtures/: Cargo.toml  fs_probe_plugin.wasm  regenerate.sh  slow_loop_plugin.wasm
crates/agent-tools-wasm/tests/fixtures/echo_plugin/: Cargo.toml
crates/agent-tools-wasm/tests/fixtures/fs_probe_plugin/: Cargo.toml
crates/agent-tools-wasm/tests/fixtures/panicking_plugin/: Cargo.toml
crates/agent-tools-wasm/tests/fixtures/panicking_plugin/src/: main.rs
crates/agent-tools-wasm/tests/fixtures/slow_loop_plugin/: Cargo.toml
crates/agent-tools/src/: bash.rs  diff.rs  edit_file.rs  git.rs  glob_tool.rs  grep.rs  lib.rs  ls.rs  read_file.rs  skill.rs  web_fetch.rs  web_search.rs  write_file.rs
crates/minder-cli/: Cargo.toml
crates/minder-cli/src/: config.rs  file_reporter.rs  loop_mode.rs  main.rs  markdown.rs  provider_select.rs  reporter.rs  session_store.rs
crates/minder-core/: Cargo.toml
crates/minder-core/src/: hooks.rs  lib.rs  message.rs  provider.rs  reporter.rs  session.rs  tool.rs
crates/minder-hooks/: Cargo.toml
crates/minder-hooks/src/: agent.mq  default_policy.mq  engine.rs
crates/minder-hooks/tests/: session_integration.rs
crates/minder-providers/: Cargo.toml
crates/minder-providers/src/: anthropic.rs  gemini.rs  lib.rs  ollama.rs  openai.rs
crates/minder-tools/: Cargo.toml
crates/minder-tools-mcp/: Cargo.toml
crates/minder-tools-mcp/src/: lib.rs  manifest.rs
crates/minder-tools-wasm/: Cargo.toml
crates/minder-tools-wasm/src/: abi.rs  host_fetch.rs  lib.rs  manifest.rs
crates/minder-tools-wasm/tests/: plugin_integration.rs
crates/minder-tools-wasm/tests/fixtures/: echo_plugin.wasm  net_probe_plugin.wasm  panicking_plugin.wasm
crates/minder-tools-wasm/tests/fixtures/echo_plugin/src/: main.rs
crates/minder-tools-wasm/tests/fixtures/fs_probe_plugin/src/: main.rs
crates/minder-tools-wasm/tests/fixtures/net_probe_plugin/: Cargo.toml
crates/minder-tools-wasm/tests/fixtures/net_probe_plugin/src/: main.rs
crates/minder-tools-wasm/tests/fixtures/panicking_plugin/: Cargo.toml
crates/minder-tools-wasm/tests/fixtures/slow_loop_plugin/: Cargo.toml
crates/minder-tools-wasm/tests/fixtures/slow_loop_plugin/src/: main.rs
crates/minder-tools/src/: bash.rs  checkpoint.rs  delete_file.rs  diff.rs  edit_file.rs  git.rs  glob_tool.rs  grep.rs  lib.rs  ls.rs  read_file.rs  skill.rs  subagent.rs  todo.rs  web_fetch.rs  web_search.rs  worktree.rs  write_file.rs
docs/: index.html
hooks/: security.mq
skills/commit-messages/: SKILL.md
