[workspace]
resolver = "3"
members = [
    "crates/minder-core",
    "crates/minder-providers",
    "crates/minder-tools",
    "crates/minder-tools-wasm",
    "crates/minder-tools-mcp",
    "crates/minder-hooks",
    "crates/minder-cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
repository = "https://github.com/harehare/minder"
homepage = "https://github.com/harehare/minder"
readme = "README.md"

[workspace.dependencies]
minder-core = { path = "crates/minder-core", version = "0.1.0" }
minder-providers = { path = "crates/minder-providers", version = "0.1.0" }
minder-tools = { path = "crates/minder-tools", version = "0.1.0" }
minder-tools-wasm = { path = "crates/minder-tools-wasm", version = "0.1.0" }
minder-tools-mcp = { path = "crates/minder-tools-mcp", version = "0.1.0" }
minder-hooks = { path = "crates/minder-hooks", version = "0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time"] }
tokio-util = "0.7"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
thiserror = "2"
reqwest = { version = "0.13", features = ["json", "query"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
ignore = "0.4"
regex = "1"
similar = "3"
mq-markdown = { version = "0.6", default-features = false, features = ["std", "color"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }
rustyline = "18"
clap = { version = "4", features = ["derive"] }
