[package]
name = "agent-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "minder"
path = "src/main.rs"

[dependencies]
agent-core.workspace = true
agent-providers.workspace = true
agent-tools.workspace = true
agent-tools-wasm.workspace = true
agent-hooks.workspace = true
async-trait.workspace = true
mq-lang = { version = "0.6", default-features = false, features = ["std", "sync", "file-io"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
