[package]
name = "agent-providers"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agent-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
