[package]
name = "agent-tools-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agent-core.workspace = true
agent-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["fs", "rt", "time"] }
async-trait.workspace = true
reqwest.workspace = true
toml = "1"
wasmtime = "46.0.1"
wasmtime-wasi = "46.0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
uuid.workspace = true
