[package]
name = "agent-tools"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agent-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["fs", "process", "time", "rt"] }
tokio-util.workspace = true
glob.workspace = true
ignore.workspace = true
regex.workspace = true
reqwest.workspace = true
similar.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
wiremock = "0.6"
