[package]
name = "minder-hooks"
description = "mq-based hook engine (.agent/hooks/*.mq) for the minder coding-agent harness"
categories = ["development-tools"]
keywords = ["agent", "mq", "coding-agent"]
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
minder-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
mq-lang = { version = "0.6", default-features = false, features = ["std", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
uuid.workspace = true
