[package]
name = "minder-providers"
description = "Anthropic/OpenAI/Gemini/Ollama client implementations for the minder coding-agent harness"
categories = ["development-tools"]
keywords = ["agent", "llm", "coding-agent"]
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
minder-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
