[package]
name = "minder-tools-mcp"
description = "MCP client for the minder coding-agent harness -- spawns configured servers and exposes their tools"
categories = ["development-tools"]
keywords = ["agent", "mcp", "coding-agent"]
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
minder-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "process"] }
async-trait.workspace = true
toml = "1"
rmcp = { version = "2", default-features = false, features = ["client", "transport-child-process"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
